--- a/Leetcode/1038-从二叉搜索树到更大和树.md
+++ b/Leetcode/1038-从二叉搜索树到更大和树.md
@@ -10,9 +10,9 @@
 
 提醒一下，二叉搜索树满足下列约束条件：
 
-节点的左子树仅包含键 小于 节点键的节点。
-节点的右子树仅包含键 大于 节点键的节点。
-左右子树也必须是二叉搜索树。
+- 节点的左子树仅包含键 小于 节点键的节点。
+- 节点的右子树仅包含键 大于 节点键的节点。
+- 左右子树也必须是二叉搜索树。
 
 示例：
 
@@ -25,9 +25,9 @@
 
 提示：
 
-树中的节点数介于 1 和 100 之间。
-每个节点的值介于 0 和 100 之间。
-给定的树为二叉搜索树。
+- 树中的节点数介于 1 和 100 之间。
+- 每个节点的值介于 0 和 100 之间。
+- 给定的树为二叉搜索树。
 
 
 注意：该题目与 538: https://leetcode-cn.com/problems/convert-bst-to-greater-tree/  相同
