--- a/Leetcode/530-二叉搜索树的最小绝对差.md
+++ b/Leetcode/530-二叉搜索树的最小绝对差.md
@@ -28,8 +28,8 @@
 
 提示：
 
-树中至少有 2 个节点。
-本题与 783 https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/ 相同
+- 树中至少有 2 个节点。
+- 本题与 783 https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/ 相同
 
 
 
