--- a/Leetcode/783-二叉搜索树节点最小距离.md
+++ b/Leetcode/783-二叉搜索树节点最小距离.md
@@ -29,9 +29,9 @@
 
 注意：
 
-二叉树的大小范围在 2 到 100。
-二叉树总是有效的，每个节点的值都是整数，且不重复。
-本题与 530：https://leetcode-cn.com/problems/minimum-absolute-difference-in-bst/ 相同
+- 二叉树的大小范围在 2 到 100。
+- 二叉树总是有效的，每个节点的值都是整数，且不重复。
+- 本题与 530：https://leetcode-cn.com/problems/minimum-absolute-difference-in-bst/ 相同
 
 
 
